Get all manhwas (missing characters, studio atm etc.), include run scripts in gradle distribute task